add authentication to admin endpoints